Closed Bug 1289757 Opened 8 years ago Closed 8 years ago

[Coverity #749955][Uninitialized scalar field] In constructor nsWebBrowserPersist()

Categories

(Core Graveyard :: Embedding: APIs, defect)

defect
Not set
normal

Tracking

(firefox51 fixed)

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: paul.bignier, Assigned: paul.bignier)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: [Coverity #749955])

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:45.0) Gecko/20100101 Firefox/45.0
Build ID: 20160608174051

Steps to reproduce:

See commit message for a bit more info
Attachment #8775108 - Flags: review?(mconley)
Assignee: nobody → paul.bignier
Keywords: coverity
Whiteboard: [Coverity #749955]
Comment on attachment 8775108 [details] [diff] [review]
0001-Coverity-749955-Uninitialized-scalar-field-In-constr.patch

Review of attachment 8775108 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8775108 - Flags: review?(mconley) → review+
Component: Untriaged → Embedding: APIs
Product: Firefox → Core
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/30d7e6c8d447
[Uninitialized scalar field] In constructor nsWebBrowserPersist(). r=mconley
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/30d7e6c8d447
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: