Bug 1289757 - [Uninitialized scalar field] In constructor nsWebBrowserPersist(). r=mconley  * Only pushing this file because it's the only "Uninitialized scalar field" defect in the "embedding" module that is fixed that way.